# pyguis

./: .gitignore  Makefile  README.md  pyproject.toml
data/: images.csv  images2.csv
docs/source/: conf.py  index.rst  refs.bib
pyguis/: __main__.py  app.py  arguments.py  themes.py  urlimages.py
pyguis/css/: layout.css
pyguis/utils/: css.py  db.py  files.py  images.py
pyguis/widgets/: layout.py
